# voltlane

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  voltlane.config.toml
.github/workflows/: ci.yml
crates/voltlane-core/: Cargo.toml
crates/voltlane-core/src/: assets.rs  diagnostics.rs  engine.rs  export.rs  fixtures.rs  lib.rs  model.rs  parity.rs  persistence.rs  time.rs
crates/voltlane-core/tests/: audio_assets.rs  audio_clip_workflow.rs  automation_lanes.rs  chip_backend_render.rs  clip_editing.rs  export_smoke.rs  fx_suite.rs  mixer_routing.rs  parity_harness.rs  performance_regression.rs  project_corruption_prop.rs  tracker_grid.rs
crates/voltlane-core/tests/fixtures/: parity_baseline.json
scripts/: run_parity_harness.sh  run_perf_regression.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/res/licenses/: piano.sf2.LICENSE.txt
src-tauri/res/soundfonts/: README.md
src-tauri/src/: config.rs  lib.rs  main.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css  types.ts
ui/src/api/: tauri.ts
ui/src/components/: AudioBrowserPanel.tsx  ClipEditor.tsx  ParityPanel.tsx  TrackLane.tsx  TransportBar.tsx
ui/src/lib/: logger.ts
ui/src/store/: projectStore.ts
